--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </header>
 <body>
   <div class="container">
-    <div>
+    <div id="initialInputs">
       <label for="subjects">Number of Subjects: </label>
       <input type="number" id="subjects" min="1" placeholder="Enter number of subjects">
       <button onclick="createFields()">Create Fields</button>
     </div>
     <div id="inputFields"></div>
-    <button onclick="calculateSGPA()">Calculate SGPA</button>
+    <button id="calculateButton" onclick="calculateSGPA()" style="display: none;">Calculate SGPA</button>
     <h2 id="result"></h2>
    <div id="error" style="color: red;"></div>
   </div>
